--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-color: rgb(140, 167, 247);
+    background-color: silver;
 }
 
 .contaner {
@@ -24,8 +24,8 @@ body {
     width: 100%;
     height: 85%;
     font-size: 50px;
-    background-color: black;
-    color: white;
+    background-color: white;
+    color: black;
     border-radius: 15px;
 }
 
@@ -45,7 +45,8 @@ button {
     padding: 4%;
     width: 100%;
     height: 100%;
-    background-color: rgb(163, 123, 255);
+    background-color: black;
+    color: white;
     font-size: 40px;
     border-radius: 10px;
 }
